creacion de section y h2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <h1>clase hithub</h1>
     </header>
     <main>
-
+        <section>
+            <h2>estudiar git</h2>
+        </section>
     </main>
     <footer>
 
